FreedomSanboxAntDeploy/src/objects/Product_Master__c.object
<CustomObject>
    <fields>
        <fullName>Active_Recommendation_Count__c</fullName>
        <label>Active Recommendation Count</label>
        <summaryFilterItems>
            <field>Product_Recommendation_Master__c.CurrentActiveRecommnedation__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Product_Recommendation_Master__c.Product_Code__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Asset_Class__c</fullName>
        <label>Asset Class</label>
        <picklist>
            <picklistValues>
                <fullName>Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Base_Product_Weightage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Base Product Weightage</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_NAV__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current NAV</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currently_Recommended__c</fullName>
        <label>Currently Recommended</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomUniqueKey__c</fullName>
        <description>ProductName + Product Type + PM Name</description>
        <label>CustomUniqueKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Collection_Analysis_Control__c</fullName>
        <label>Data Collection Analysis Control</label>
        <picklist>
            <picklistValues>
                <fullName>Portfolio Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Networth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Flow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Allocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Insurance Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Insurance Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Succession Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Assumptions</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Earn_One_Time_Fees__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you check this field, For New Price Book creation &quot;One Time Layout&quot; should be selected.</inlineHelpText>
        <label>Earn One Time Fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Earn_Trail_Fees__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you check this field, For New Price Book creation &quot;Upfront/Trail Layout&quot; should be selected.</inlineHelpText>
        <label>Earn Trail Fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Earn_Upfront_Fees__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you check this field, For New Price Book creation &quot;Upfront/Trail Layout&quot; should be selected.</inlineHelpText>
        <label>Earn Upfront Fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fees__c</fullName>
        <label>Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fees_in_Advance_or_On_Service_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Put an &quot;Advance Value&quot; in Price Book if this filled is checked for Price Category &quot;One Time&quot;.</inlineHelpText>
        <label>Fees in Advance or On Service Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Planing_Output_Report__c</fullName>
        <label>Financial Planing Output Report</label>
        <picklist>
            <picklistValues>
                <fullName>Introduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disclosure Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goal Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Statements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Goal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Insurance Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estate Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summary Action Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annexure 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Plan Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Acknowledgement</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Goals_Allowed_List__c</fullName>
        <label>Goals Allowed List</label>
        <picklist>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marriage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parental Responsibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money to Heirs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Investment_Type__c</fullName>
        <label>Investment Type</label>
        <picklist>
            <controllingField>Asset_Class__c</controllingField>
            <picklistValues>
                <fullName>SIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lumpsum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity MF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ULIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt MF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traditional Insurance Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold ETF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold MF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold Scheme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Loan Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Illness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Insurance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsRenewalAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Renewal Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRenewalDateUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRenewalDateUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTopupService__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Topup Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Product Master object</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Recommended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recommended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Goals_Allowed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No of Goals Allowed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Policy_Type__c</fullName>
        <label>Policy Type</label>
        <picklist>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Illness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Accident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Householder&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Whole Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endowment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ULIP - Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pension Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money-Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ULIP - Equity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mutual Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exchange-Traded Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FFreedom Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Base Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Added Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bond</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Manufacturer__c</fullName>
        <label>Product Manufacturer</label>
        <referenceTo>Product_Manufacturer_Master__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Product_Master</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommended_Image__c</fullName>
        <formula>IF (
     ISPICKVAL(Currently_Recommended__c, &apos;Yes&apos;), IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 10, 20) ,
 
IF(ISPICKVAL(Currently_Recommended__c, &apos;No&apos;), IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 10, 20),
IMAGE(&quot;/s.gif&quot;, &quot;yellow&quot;, 1, 1)))</formula>
        <label>&lt;font color=&quot;white&quot;&gt;Recommended</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Grace_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Renewal Grace Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Period_In_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Renewal Period In Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SIP_Allowed__c</fullName>
        <label>SIP Allowed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subscription_Period_In_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Subscription Period In Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Name__c</columns>
        <columns>Product_Manufacturer__c</columns>
        <columns>ProductType__c</columns>
        <columns>Currently_Recommended__c</columns>
        <columns>SIP_Allowed__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PRD-{000000}</displayFormat>
        <label>Product Code</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IW00000008qtxMAA_00NW0000000itScMAI</fullName>
        <active>true</active>
        <field>Product_Default_Allocation__c.Product__c</field>
        <filterItems>
            <field>Product_Master__c.Asset_Class__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Product_Master__c.Investment_Type__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Product Default Allocation_Product</name>
    </namedFilters>
    <pluralLabel>Products</pluralLabel>
    <recordTypes>
        <fullName>Ffreedom_Product_Services</fullName>
        <active>true</active>
        <description>Select Ffredom Base product and value added services</description>
        <label>Ffreedom Product Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Insurance</fullName>
        <active>true</active>
        <label>General Insurance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Life_Insurance</fullName>
        <active>true</active>
        <label>Life Insurance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mutual_Fund</fullName>
        <active>true</active>
        <label>Mutual Fund</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Products</fullName>
        <active>true</active>
        <description>Loans,Fixed Deposits and Bond related Products</description>
        <label>Other Products</label>
    </recordTypes>
    <recordTypes>
        <fullName>Value_Added_Services</fullName>
        <active>true</active>
        <description>Product Type picklist contain only Value Added Services.</description>
        <label>Value Added Services</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Earn_Fees_Selection</fullName>
        <active>false</active>
        <description>You can select &quot;Earn One TIme Fees&quot; OR &quot;Earn Trail Fees&quot; OR &quot;Earn Upfront Fees&quot; OR  &quot;Earn Trail Fees AND Earn Upfront Fees&quot; at a time.</description>
        <errorConditionFormula>AND(
 Earn_One_Time_Fees__c  == True,
 OR( Earn_Trail_Fees__c == True,  Earn_Upfront_Fees__c == True))</errorConditionFormula>
        <errorMessage>Earn One Time Fees and Earn Trail or Upfront Fees cannot be selected at a time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Recommandation_Record_should_be_present</fullName>
        <active>false</active>
        <description>Atleast 1 Active Product Recommendation needs to exist for the current Product in order to mark it as recommended.</description>
        <errorConditionFormula>IF(
AND(
ISPICKVAL( Currently_Recommended__c , &quot;Yes&quot;),
Active_Recommendation_Count__c &lt; 1),
TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Currently_Recommended__c</errorDisplayField>
        <errorMessage>Atleast 1 Active Product Recommendation needs to exist for the current Product in order to mark it as recommended.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Update_Currently_Recommended_value_to_NO</fullName>
        <active>false</active>
        <description>If all Product Recommendation records have status as &apos;Expired&apos; then Currently Recommended fields should be set to &apos;No&apos;.</description>
        <errorConditionFormula>IF(
     AND(
             ISPICKVAL( Currently_Recommended__c , &quot;No&quot;), 
             Active_Recommendation_Count__c  &lt; 1),
TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Currently_Recommended__c</errorDisplayField>
        <errorMessage>If all Product Recommendation records have status as &apos;Expired&apos; then Currently Recommended fields should be set to &apos;No&apos;.</errorMessage>
    </validationRules>
</CustomObject>